@@ -1,9 +1,10 @@
 /* DO NOT EDIT THIS FILE - it is machine generated */
+#ifndef _Included_org_xapian_XapianJNI
+#define _Included_org_xapian_XapianJNI
+
 #include <jni.h>
 /* Header for class org_xapian_XapianJNI */
 
-#ifndef _Included_org_xapian_XapianJNI
-#define _Included_org_xapian_XapianJNI
 #ifdef __cplusplus
 extern "C" {
 #endif
